solved overlap issue

--- a/src/components/Herosection.css
+++ b/src/components/Herosection.css
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 .hero-section{
     display:flex;
@@ -9,6 +10,7 @@
     align-items: center;
     height:168px;
     width:721px;
+    margin-bottom: 50px;
 }
 .hero-section h1{
     font-weight: 200;
