--- a/src/components/TopBarOptions.css
+++ b/src/components/TopBarOptions.css
@@ -7,6 +7,7 @@
     border-top: 1px solid #e5e5e5;
     background-color: white;
     height:3.5rem;
+    margin-top: 50px;
 
   }
   
